--- a/public/main.css
+++ b/public/main.css
@@ -33,14 +33,19 @@ main {
 #file-container {
     --radius: 10px;
     --header-height: min(44px, 50%);
+    --light-color: #faf0e6;
+    --medium-color: #f6e3d0;
+    --dark-color: rgba(86, 51, 16, 0.6);
+    --bottom-color: rgba(129, 77, 24, 0.2);
     width: 100%;
     height: 75%;
-    background-color: #faf0e6;
-    border: 2px rgba(129, 77, 24, 0.5) solid;
+    background-color: var(--light-color);
+    /* border: 2px rgba(129, 77, 24, 0.5) solid; */
     border-radius: var(--radius);
     z-index: 0;
     position: relative;
     isolation: isolate;
+    overflow: auto !important;
 }
 
 #file-container::before {
@@ -49,8 +54,8 @@ main {
     text-align: center;
     width: 100%;
     height: var(--header-height);
-    background: linear-gradient(#faf0e6, #f6e3d0);
-    border-bottom: 1px solid rgba(129, 77, 24, 0.2);
+    background: linear-gradient(var(--light-color), var(--medium-color));
+    border-bottom: 1px solid var(--bottom-color);
     border-radius: var(--radius) var(--radius) 0px 0px;
     display: flex;
     align-items: center;
@@ -62,7 +67,7 @@ main {
 #file-container[data-files="0"]::after,
 #file-container[data-hover="true"]::after {
     content: "Add or Drop Files Here";
-    color: rgba(86, 51, 16, 0.6);
+    color: var(--dark-color);
     font-size: 4rem;
     display: flex;
     align-items: center;
@@ -86,7 +91,7 @@ main {
 
 #file-container[data-files="0"] > #file_copy {
     display: flex;
-    color: rgba(86, 51, 16, 0.6);
+    color: var(--dark-color);
     font-size: 5rem;
     position: absolute;
     top: 50%;
@@ -97,4 +102,55 @@ main {
 
 #file-container[data-hover="true"] > #file_copy {
     display: none;
+}
+
+#file-container > .file {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border-bottom: 1px solid var(--bottom-color);
+}
+
+#file-container[data-files="0"] > .file {
+    display: none;
+}
+
+#file-container > .file > .reorder,
+#file-container > .file > .remove {
+    width: 38px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 3rem;
+    color: var(--dark-color);
+}
+
+#file-container > .file > .reorder {
+    content: "\e5d2";
+    font-family: "Material Symbols Outlined";
+    background: var(--medium-color);
+    margin-right: 5px;
+    cursor: move;
+}
+
+#file-container > .file > .remove {
+    content: "\e5cd";
+    font-family: "Material Symbols Outlined";
+    color: #d7c7b7;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+#file-container > .file > .remove:hover {
+    color: var(--dark-color);
+}
+
+#file-container > .file > .name {
+    display: flex;
+    flex-direction: row;
+    flex-grow: 1;
 }
