--- a/public/main.css
+++ b/public/main.css
@@ -32,7 +32,7 @@ main {
 
 #file-container {
     --radius: 10px;
-    --header-height: min(44px, 50%);
+    --header-height: 44px;
     --light-color: #faf0e6;
     --medium-color: #f6e3d0;
     --dark-color: rgba(86, 51, 16, 0.6);
@@ -60,7 +60,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 0;
+    z-index: 2;
     position: relative;
 }
 
@@ -107,9 +107,12 @@ main {
 #file-container > .file {
     width: 100%;
     height: 50px;
+    z-index: 0;
+    position: relative;
     display: flex;
     flex-direction: row;
     align-items: center;
+    background-color: var(--light-color);
     border-bottom: 1px solid var(--bottom-color);
 }
 
@@ -165,6 +168,7 @@ main {
     border: 2px solid var(--dark-color);
     border-right-width: 0px;
     border-left-width: 0px;
+    z-index: 1;
 }
 
 #file-container > .file[data-hold="true"] > .reorder {
