--- a/public/main.css
+++ b/public/main.css
@@ -106,6 +106,19 @@ main {
     display: none;
 }
 
+#file-container > #file_add {
+    color: rgba(86, 51, 16, 0.8);
+    font-size: 3rem;
+    font-weight: bold;
+    margin-right: 5px;
+    z-index: 2;
+    position: absolute;
+    top: calc(var(--header-height) / 2);
+    transform: translateY(-50%);
+    right: 0px;
+    cursor: pointer;
+}
+
 #file-container > .file {
     width: 100%;
     height: 50px;
