Added Basic Scrolling

--- a/public/main.css
+++ b/public/main.css
@@ -47,6 +47,7 @@ main {
     position: relative;
     isolation: isolate;
     overflow: auto;
+    scroll-behavior: smooth;
 }
 
 #file-container::before {
