--- a/public/main.css
+++ b/public/main.css
@@ -88,6 +88,13 @@ main {
     font-size: 370%;
 }
 
+#file-container > #file-extra {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+}
+
 #file-container > #file-extra > #file_copy {
     display: none;
 }
@@ -113,11 +120,15 @@ main {
     font-weight: bold;
     margin-right: 5px;
     z-index: 2;
-    position: absolute;
+    position: sticky;
     top: calc(var(--header-height) / 2);
     transform: translateY(-50%);
-    right: 0px;
+    left: 100%;
     cursor: pointer;
+}
+
+#file-container[data-hover="true"] > #file-extra > #file_add {
+    display: none;
 }
 
 #file-container > .file {
