--- a/public/main.css
+++ b/public/main.css
@@ -41,7 +41,6 @@ main {
     width: 100%;
     height: 75%;
     background-color: var(--light-color);
-    /* border: 2px rgba(129, 77, 24, 0.5) solid; */
     border-radius: var(--radius);
     z-index: 0;
     position: relative;
@@ -49,6 +48,7 @@ main {
     overflow-x: hidden;
     overflow-y: auto;
     scroll-behavior: smooth;
+    margin-bottom: 5%;
 }
 
 #file-container::before {
