--- a/public/main.css
+++ b/public/main.css
@@ -2,6 +2,7 @@
     --light-color: #faf0e6;
     --medium-color: #f6e3d0;
     --dark-color: rgba(86, 51, 16, 0.6);
+    --darker-color: rgba(86, 51, 16, 0.8);
     --bottom-color: rgba(129, 77, 24, 0.2);
 }
 
@@ -119,7 +120,7 @@ main {
 }
 
 #file-container > #file-extra > #file_add {
-    color: rgba(86, 51, 16, 0.8);
+    color: var(--darker-color);
     font-size: 3rem;
     font-weight: bold;
     margin-right: 5px;
@@ -253,8 +254,7 @@ main {
     margin-bottom: 0;
 }
 
-#merge-button {
-    width: 20%;
+.primary-btn {
     color: #fff;
     font-size: 1.5rem;
     line-height: 2rem;
@@ -264,12 +264,112 @@ main {
     background-color: #4e9af1;
     border: 0.16em solid rgba(255, 255, 255, 0);
     border-radius: 5px;
-    margin-bottom: 0;
-    align-self: center;
     cursor: pointer;
     user-select: none;
+    margin-bottom: 0;
 }
 
-#merge-button:hover {
+.primary-btn:hover,
+.primary-btn:focus {
+    color: #fff;
     border-color: rgba(255, 255, 255, 1);
+}
+
+#merge-button {
+    width: 20%;
+    align-self: center;
+}
+
+.xpp_modal-container > .background {
+    opacity: 0.7;
+    background-color: #000;
+    z-index: 10;
+    position: fixed;
+    inset: 0;
+    animation: back-fadeIn 0.3s;
+}
+
+@keyframes back-fadeIn {
+    0% {
+        opacity: 0;
+    }
+    30% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+.xpp_modal-container > .xpp_modal {
+    width: min(40%, 500px);
+    background-color: var(--light-color);
+    border-radius: 10px;
+    padding: 1.25rem;
+    max-height: 85vh;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    z-index: 10;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 0 0 25px rgba(0, 0, 0, 0.5);
+}
+
+.xpp_modal > .header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 1.75rem;
+}
+
+.xpp_modal > .header > .title {
+    text-align: center;
+    font-size: 2.5rem;
+    font-weight: normal;
+    margin-bottom: 0.25rem;
+}
+
+.xpp_modal > .header > #modal_close {
+    content: "\e5cd";
+    font-family: "Material Symbols Outlined";
+    font-size: 3.1rem;
+    font-weight: bold;
+    color: rgba(80, 59, 38, 0.6);
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    right: 5px;
+}
+
+.xpp_modal > .header > #modal_close:hover {
+    color: var(--darker-color);
+}
+
+.xpp_modal > .content {
+    overflow: auto;
+}
+
+.xpp_modal > .content > p {
+    margin-bottom: 1rem;
+}
+
+.xpp_modal > .footer {
+    display: flex;
+    flex-direction: column;
+}
+
+.xpp_modal > .header > hr,
+.xpp_modal > .footer > hr {
+    margin: 0;
+    border-top-color: var(--bottom-color);
+    margin-bottom: 1.25rem;
+}
+
+.xpp_modal > .footer > button {
+    width: 20%;
+    margin-bottom: 0;
+    align-self: end;
 }
